# algo_trading_bot

./: .env.example  .gitignore  CLAUDE.md  HANDOFF.md  NEXT_AGENT_PROMPT.md  PLAN.md  README.md  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
config/: CLAUDE.md  __init__.py  logging_config.py  settings.py
data/: DATABENTO_DOWNLOAD_SPECS.md
infrastructure/: CLAUDE.md
research/: ANALYSIS_SUMMARY.md  backtest_comparison.py  deep_analysis.py  final_analysis_report.py  mcl_deep_analysis.py  mcl_microstructure_analysis.py
results/: .gitkeep
results/mean_reversion_20260112_033442/: daily_pnl.csv  summary.json  trades.csv
results/mean_reversion_20260112_033543/: parameters.json  summary.json
results/mean_reversion_20260112_033543/charts/: cumulative_pnl.html  monthly_returns.html  rolling_sharpe.html  streak_analysis.html  trade_analysis.html  trade_distribution.html
results/mean_reversion_20260112_033756/: summary.json
results/mean_reversion_20260112_033756/charts/: cumulative_pnl.html  monthly_returns.html  rolling_sharpe.html  streak_analysis.html  trade_analysis.html  trade_distribution.html
results/mean_reversion_20260112_034934/: daily_pnl.csv  summary.json  trades.csv
scripts/: CLAUDE.md  __init__.py  convert_databento.py  download_historical.py  run_backtest.py
src/: __init__.py
src/backtest/: CLAUDE.md  __init__.py  engine.py  metrics.py  portfolio.py
src/data/: CLAUDE.md  __init__.py  databento_client.py  schemas.py  storage.py
src/execution/: __init__.py
src/risk/: CLAUDE.md  __init__.py  position_sizer.py  risk_manager.py  scalping_risk.py  stop_loss.py
src/strategy/: CLAUDE.md  __init__.py  base_strategy.py  indicators.py  mean_reversion_strategy.py  momentum_strategy.py  scalping_indicators.py  scalping_strategy.py  session_filter.py
src/visualization/: CLAUDE.md  __init__.py  charts.py  report.py  window.py
tests/: __init__.py
(+360 files in other folders)
